# octwords_back

./: .env  .gitmodules  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: docker_build.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240613_000001_users.rs  m20240613_000002_words.rs  m20240620_000003_learn_event.rs  password.rs
src/: db_setup.rs  main.rs
src/entity/: learn_event.rs  mod.rs  stardict.rs  user.rs  word.rs
src/migrator/: m20240613_000001_users.rs  m20240613_000002_words.rs  mod.rs
src/user/: handler.rs  mod.rs  repository.rs
src/user/service/: jwt.rs  mod.rs  password.rs
src/word/: handler.rs  mod.rs  repository.rs  service.rs
