[package]
name = "octwords_back"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.15.0"
serde = "1.0.203"
sea-orm-migration = "^0.12.0"
argon2 = { version = "0.5.3", features = ["std"]}
thiserror = "1.0.61"
jsonwebtoken = "9.3.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"


