[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
octwords_back = { path = ".." }
argon2 = { version = "0.5.3", features = ["std"]}

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [ "sqlx-sqlite", "runtime-tokio-rustls"] 
